# krwallet

./: Cargo.toml  README.md
src/: channel_actor.rs  lib.rs  main.rs
src/wallet/: mod.rs  processor.rs  wallet_actor.rs
tests/: integration_test.rs
