[package]
name = "krwallet"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
csv-async = { version = "1.2.6", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1.89"
futures = "0.3"

[[bin]]
name = "krwallet"
path = "src/bin/main.rs"
